complete carousel section + services section

--- a/index.html
+++ b/index.html
@@ -92,26 +92,109 @@
         <!-- Carousel  -->
         <section class="carousel">
             <div class="container">
-                <div class="carousel-left">
-                    <div class="title">
-                        <p
-                            class="sub-title animate__animated animate__fadeInUp"
-                        >
-                            We are The Best
-                        </p>
-                        <h2
-                            class="content-title animate__animated animate__fadeInUp animate__delay-1s"
-                        >
-                            Freelance Product Designer Running
-                        </h2>
+                <div class="carousel-content">
+                    <div class="carousel-left">
+                        <div class="title">
+                            <p
+                                class="sub-title animate__animated animate__fadeInUp"
+                            >
+                                We are The Best
+                            </p>
+                            <h2
+                                class="content-title animate__animated animate__fadeInUp animate__delay-1s"
+                            >
+                                Freelance Product Designer Running
+                            </h2>
+                            <p
+                                class="desc animate__animated animate__fadeInUp animate__delay-2s"
+                            >
+                                We develop the relationships that underpin the
+                                next phase in your <br />
+                                organisation’s growth.
+                            </p>
+                            <ul
+                                class="carousel__list animate__animated animate__fadeInUp animate__delay-3s"
+                            >
+                                <li class="carousel__item">
+                                    <i class="fa-solid fa-check"></i>
+                                    Master's degree in designing
+                                </li>
+                                <li class="carousel__item">
+                                    <i class="fa-solid fa-check"></i>
+                                    Outstanding mobile design
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="carousel-right">
+                        <div>
+                            <img src="./imgs/pic3_1.png" alt="human" />
+                        </div>
                     </div>
                 </div>
-                <div class="carousel-right"></div>
             </div>
         </section>
 
         <!-- Services -->
-        <section class="services"></section>
+        <section class="services">
+            <div class="container">
+                <div class="title">
+                    <p class="sub-title animate__animated animate__fadeInUp">
+                        What We do Best
+                    </p>
+                    <h2
+                        class="content-title animate__animated animate__fadeInUp animate__delay-1s"
+                    >
+                        Our Digital Services
+                    </h2>
+                </div>
+
+                <div class="services-content">
+                    <!-- item 1 -->
+                    <div class="services__item">
+                        <img
+                            src="./imgs/pic1_3.jpg"
+                            alt=""
+                            class="services__img"
+                        />
+                        <h3 class="services__title">Web Development</h3>
+                        <p class="services__desc">
+                            Vestibulum a efficitur ex. Ut iaculis dapibus
+                            iaculis. Praesent lacus magna, rhoncus quis magna
+                            quis.
+                        </p>
+                    </div>
+                    <!-- item2 -->
+                    <div class="services__item">
+                        <img
+                            src="./imgs/pic2_2.jpg"
+                            alt=""
+                            class="services__img"
+                        />
+                        <h3 class="services__title">Strategy & Research</h3>
+                        <p class="services__desc">
+                            Vestibulum a efficitur ex. Ut iaculis dapibus
+                            iaculis. Praesent lacus magna, rhoncus quis magna
+                            quis.
+                        </p>
+                    </div>
+                    <!-- item3 -->
+                    <div class="services__item">
+                        <img
+                            src="./imgs/pic3_2.jpg"
+                            alt=""
+                            class="services__img"
+                        />
+                        <h3 class="services__title">Growth Tracking</h3>
+                        <p class="services__desc">
+                            Vestibulum a efficitur ex. Ut iaculis dapibus
+                            iaculis. Praesent lacus magna, rhoncus quis magna
+                            quis.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <!-- About -->
         <section class="about"></section>
