do the AboutUs section

--- a/index.html
+++ b/index.html
@@ -124,9 +124,16 @@
                                     Outstanding mobile design
                                 </li>
                             </ul>
+                            <button
+                                class="btn animate__animated animate__fadeInUp animate__delay-4s"
+                            >
+                                GET STARTED
+                            </button>
                         </div>
                     </div>
-                    <div class="carousel-right">
+                    <div
+                        class="carousel-right animate__animated animate__fadeInUp animate__delay-3s"
+                    >
                         <div>
                             <img src="./imgs/pic3_1.png" alt="human" />
                         </div>
@@ -197,7 +204,57 @@
         </section>
 
         <!-- About -->
-        <section class="about"></section>
+        <section class="about">
+            <div class="container">
+                <div class="about-content">
+                    <div class="about__left">
+                        <img src="./imgs/pic1.jpg" alt="" class="about__img" />
+                    </div>
+                    <div class="about__right">
+                        <div class="title">
+                            <p class="sub-title">About Us</p>
+                            <h2 class="content-title">
+                                Build Your <br />
+                                Business Website <br />
+                                Better
+                            </h2>
+                            <p class="desc">
+                                Proin laoreet leo vel enim gravida, at porttitor
+                                metus ultricies. Cras eu velit enim. Vivamus
+                                blandit, dolor ut aliquet rutrum, ex elit mattis
+                                sapien, non molestie felis neque et nulla. Sed
+                                euismod turpis id nibh suscipit semper.
+                                Pellentesque dapibus risus arcu.
+                            </p>
+                            <ul class="about__list">
+                                <li class="about__item">
+                                    <i class="fa-solid fa-check"></i>
+
+                                    We support programs that create advancement
+                                    opportunities for people.
+                                </li>
+                                <li class="about__item">
+                                    <i class="fa-solid fa-check"></i>
+                                    Get a view of events and trends. Be updated
+                                    on our recent news.
+                                </li>
+                                <li class="about__item">
+                                    <i class="fa-solid fa-check"></i>
+                                    Finally, it all comes down to people.
+                                    Creating a winning team.
+                                </li>
+                                <li class="about__item">
+                                    <i class="fa-solid fa-check"></i>
+                                    Get a view of events and trends. Be updated
+                                    on our recent news.
+                                </li>
+                            </ul>
+                            <button class="btn">LEARN MORE</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <!-- numbers -->
         <section class="numb"></section>
