complete feature section + Blogs Section

--- a/index.html
+++ b/index.html
@@ -13,6 +13,22 @@
             rel="stylesheet"
         />
 
+        <!-- Owlcarousel  CSS-->
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
+            integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
+            integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        />
+
         <!-- fontawesome -->
         <link
             rel="stylesheet"
@@ -352,11 +368,11 @@
                                 data-wow-delay="0.4s"
                             >
                                 <div class="features__icon">
-                                    <i class="fa-solid fa-lightbulb"></i>
+                                    <i class="fa-solid fa-laptop-code"></i>
                                 </div>
                                 <div class="features__content">
                                     <h3 class="features__title">
-                                        Idea & Analysis Gathering
+                                        Design & Developing
                                     </h3>
                                     <p class="features__desc">
                                         Maecenas laoreet efficitur sagittis.
@@ -372,7 +388,7 @@
                                 data-wow-delay="0.8s"
                             >
                                 <div class="features__icon">
-                                    <i class="fa-solid fa-lightbulb"></i>
+                                    <i class="fa-solid fa-rocket"></i>
                                 </div>
                                 <div class="features__content">
                                     <h3 class="features__title">
@@ -404,10 +420,138 @@
         <section class="portfolio"></section>
 
         <!-- Blogs -->
-        <section class="blogs"></section>
+        <section class="blogs">
+            <div class="container">
+                <div class="title">
+                    <p class="sub-title">Our Blog</p>
+                    <h2 class="content-title">Latest News & Blog</h2>
+                </div>
+                <div class="blogs-content">
+                    <div class="carousel2 owl-carousel owl-theme">
+                        <div class="blogs__item">
+                            <div class="blogs__header">
+                                <img
+                                    src="./imgs/pic1_1.jpg"
+                                    alt=""
+                                    class="blogs__img"
+                                />
+                                <p class="blogs__day">23 MARCH 2023</p>
+                            </div>
+                            <div class="blogs__body">
+                                <h3 class="blogs__title">
+                                    Lorem ipsum dolor sit amet consectetur.
+                                </h3>
+                                <p class="blogs__desc">
+                                    Nunc convallis sagittis dui eu dictum. Cras
+                                    sodales id ipsum ac aliquam. Phasellus justo
+                                    quam.
+                                </p>
+                            </div>
+                            <div class="blogs__footer">
+                                <p class="blogs__name">
+                                    <i class="fa-solid fa-circle-user"></i> BY
+                                    <span>Johne Doe</span>
+                                </p>
+                                <p class="blogs__comment">
+                                    <i class="fa-solid fa-comment-dots"></i>
+                                    <span>COMMENTS 15</span>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="blogs__item">
+                            <div class="blogs__header">
+                                <img
+                                    src="./imgs/pic2.jpg"
+                                    alt=""
+                                    class="blogs__img"
+                                />
+                                <p class="blogs__day">23 MARCH 2023</p>
+                            </div>
+                            <div class="blogs__body">
+                                <h3 class="blogs__title">
+                                    Lorem ipsum dolor sit amet consectetur.
+                                </h3>
+                                <p class="blogs__desc">
+                                    Nunc convallis sagittis dui eu dictum. Cras
+                                    sodales id ipsum ac aliquam. Phasellus justo
+                                    quam.
+                                </p>
+                            </div>
+                            <div class="blogs__footer">
+                                <p class="blogs__name">
+                                    <i class="fa-solid fa-circle-user"></i> BY
+                                    <span>Johne Doe</span>
+                                </p>
+                                <p class="blogs__comment">
+                                    <i class="fa-solid fa-comment-dots"></i>
+                                    <span>COMMENTS 15</span>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="blogs__item">
+                            <div class="blogs__header">
+                                <img
+                                    src="./imgs/pic3.jpg"
+                                    alt=""
+                                    class="blogs__img"
+                                />
+                                <p class="blogs__day">23 MARCH 2023</p>
+                            </div>
+                            <div class="blogs__body">
+                                <h3 class="blogs__title">
+                                    Lorem ipsum dolor sit amet consectetur.
+                                </h3>
+                                <p class="blogs__desc">
+                                    Nunc convallis sagittis dui eu dictum. Cras
+                                    sodales id ipsum ac aliquam. Phasellus justo
+                                    quam.
+                                </p>
+                            </div>
+                            <div class="blogs__footer">
+                                <p class="blogs__name">
+                                    <i class="fa-solid fa-circle-user"></i> BY
+                                    <span>Johne Doe</span>
+                                </p>
+                                <p class="blogs__comment">
+                                    <i class="fa-solid fa-comment-dots"></i>
+                                    <span>COMMENTS 15</span>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <!-- Footer -->
-        <footer class="footer"></footer>
+        <footer class="footer">
+            <div class="container">
+                <div class="footer__top">
+                    <div class="footer__text">
+                        <h2 class="footer__title">
+                            Subscribe To Our Newsletter
+                        </h2>
+                    </div>
+
+                    <div class="footer__form">
+                        <form action="" class="footer__form">
+                            <input
+                                type="text"
+                                class="footer__input"
+                                placeholder="Your Email Address "
+                            />
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </footer>
+
+        <!-- !Back to top -->
+        <a href="#" class="backToTop cd-top text-replace js-cd-top"
+            ><i class="fa-solid fa-arrow-up"></i
+        ></a>
+
+        <!-- !================  JS Code   ================== -->
 
         <!--! jquery -->
         <script
@@ -431,6 +575,19 @@
             crossorigin="anonymous"
             referrerpolicy="no-referrer"
         ></script>
+
+        <!-- !owlcarousel -->
+        <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
+            integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        ></script>
+
+        <!-- !back to top -->
+        <script src="./js/main.js"></script>
+        <script src="./js/util.js"></script>
+
         <!-- Run wow -->
         <script>
             new WOW().init();
@@ -441,6 +598,29 @@
         <script src="js/jquery.countup.min.js"></script>
         <script>
             $(".counter").countUp();
+        </script>
+
+        <!-- Run OwlCarousel -->
+        <script>
+            $(document).ready(function () {
+                // them class carousel2 owl-carousel owl-theme
+                $(".carousel2").owlCarousel({
+                    loop: true, //lặp lại các item
+                    margin: 30, //khoảng cách giữa các item
+                    nav: true, //hiện mũi tên trái phải
+                    responsive: {
+                        0: {
+                            items: 1, //số lượng item khi ở màn hình >= 0
+                        },
+                        576: {
+                            items: 2, //số lượng item khi ở màn hình >= 576px
+                        },
+                        1200: {
+                            items: 3, //số lượng item khi ở màn hình >= 576px
+                        },
+                    },
+                });
+            });
         </script>
     </body>
 </html>
