--- a/index.html
+++ b/index.html
@@ -528,19 +528,185 @@
             <div class="container">
                 <div class="footer__top">
                     <div class="footer__text">
-                        <h2 class="footer__title">
+                        <h2 class="footer__title--content">
                             Subscribe To Our Newsletter
                         </h2>
                     </div>
 
                     <div class="footer__form">
-                        <form action="" class="footer__form">
+                        <form action="" class="footer__input">
                             <input
                                 type="text"
-                                class="footer__input"
+                                class="footer__input1"
                                 placeholder="Your Email Address "
                             />
+                            <button class="btn btn-input">
+                                <i class="fa-solid fa-paper-plane"></i>
+                            </button>
                         </form>
+                    </div>
+                </div>
+                <div class="footer__bottom">
+                    <div class="footer__item">
+                        <a href="#!" class="footer__link">
+                            <img
+                                src="./imgs/logo-white.png"
+                                alt="logo"
+                                class="footer__logo"
+                            />
+                        </a>
+                        <ul class="footer__contact">
+                            <li>
+                                <i class="fa-solid fa-phone"></i>
+                                <span>
+                                    1800-123-4567
+                                    <br />
+                                    +91 987-654-3210
+                                </span>
+                            </li>
+                            <li>
+                                <i class="fa-solid fa-envelope"></i>
+                                <span>
+                                    info@example.com
+                                    <br />
+                                    services@gmail.com
+                                </span>
+                            </li>
+                            <li>
+                                <i class="fa-solid fa-location-dot"></i>
+                                <span>
+                                    Demo Address #8901 Marmora
+                                    <br />
+                                    Road City
+                                </span>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <!-- item2 -->
+                    <div class="footer__item">
+                        <h3 class="footer__title">Our links</h3>
+                        <ul class="footer__list">
+                            <li>
+                                <a href="#!">
+                                    <i class="fa-solid fa-angle-right"></i>
+                                    Home
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#!">
+                                    <i class="fa-solid fa-angle-right"></i>
+                                    About us
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#!">
+                                    <i class="fa-solid fa-angle-right"></i>
+                                    Services
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#!">
+                                    <i class="fa-solid fa-angle-right"></i>
+                                    Teams
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#!">
+                                    <i class="fa-solid fa-angle-right"></i>
+                                    Blogs
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <!-- item3 -->
+                    <div class="footer__item">
+                        <h3 class="footer__title">Our Services</h3>
+                        <ul class="footer__list">
+                            <li>
+                                <a href="#!">
+                                    <i class="fa-solid fa-angle-right"></i>
+                                    Strategy & Research
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#!">
+                                    <i class="fa-solid fa-angle-right"></i>
+                                    Web Development
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#!">
+                                    <i class="fa-solid fa-angle-right"></i>
+                                    Web Solution
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#!">
+                                    <i class="fa-solid fa-angle-right"></i>
+                                    Digital Marketing
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#!">
+                                    <i class="fa-solid fa-angle-right"></i>
+                                    App Design
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <!-- item4 -->
+                    <div class="footer__item">
+                        <h3 class="footer__title">Other links</h3>
+                        <ul class="footer__list">
+                            <li>
+                                <a href="#!">
+                                    <i class="fa-solid fa-angle-right"></i>
+                                    FAQ
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#!">
+                                    <i class="fa-solid fa-angle-right"></i>
+                                    Portfolio
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#!">
+                                    <i class="fa-solid fa-angle-right"></i>
+                                    Privaci Policy
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#!">
+                                    <i class="fa-solid fa-angle-right"></i>
+                                    Terms & Conditions
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#!">
+                                    <i class="fa-solid fa-angle-right"></i>
+                                    Supports
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <div class="footer__copyright">
+                <div class="container footer__content">
+                    <div class="footer__left">
+                        Copyright © 2021
+                        <span>DexignZone</span>
+                        . All rights reserved.
+                    </div>
+
+                    <div class="footer__right">
+                        <a href="#!"><i class="fa-brands fa-facebook"></i></a>
+                        <a href="#!"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="#!"><i class="fa-brands fa-twitter"></i></a>
                     </div>
                 </div>
             </div>
